@@ -34,7 +34,7 @@ class Gem::Commands::FetchCommand < Gem::Command
 
   def execute
     version = options[:version] || Gem::Requirement.default
-    all = Gem::Requirement.default
+    all = Gem::Requirement.default != version
 
     gem_names = get_all_gem_names
 
@@ -42,7 +42,7 @@ class Gem::Commands::FetchCommand < Gem::Command
       dep = Gem::Dependency.new gem_name, version
       dep.prerelease = options[:prerelease]
 
-      specs_and_sources = Gem::SpecFetcher.fetcher.fetch(dep, false, true,
+      specs_and_sources = Gem::SpecFetcher.fetcher.fetch(dep, all, true,
                                                          dep.prerelease?)
 
       spec, source_uri = specs_and_sources.sort_by { |s,| s.version }.last
